--- a/Source/NHS.Staffing.DataEntry.Portal/Styles/Site.css
+++ b/Source/NHS.Staffing.DataEntry.Portal/Styles/Site.css
@@ -68,6 +68,16 @@ ul
     border-bottom: 1px dotted #E2E2E2;
 }
 
+.noPadding
+{
+    padding:0px !important;    
+}
+
+.noBottonBorders
+{
+    border:0px !important;
+}
+
 .formSection li
 {
     margin-bottom:10px;    
@@ -502,6 +512,7 @@ div.accountInfo
     width:200px;    
     text-align:center;
     vertical-align:middle;
+    display:inline-block;
 }
 
 .shortFormTitleFieldsWithoutFloat
@@ -768,16 +779,16 @@ div.accountInfoCentered
 input[type=text], input[type=password], textarea, select
 {
     color: #000;
-    width: 92%;
     display: inline-block;    
     padding: 2px 5px;
     border:1px solid #dddddd;
     font-size:11px;
+    width:200px;
 }
 
 select
 {
-    width: 98%;
+    width:212px;
 }
 
 input[type=text]:hover, input[type=password]:hover, textarea:hover
@@ -794,7 +805,6 @@ input[type=text], input[type=password]
 label, span
 {
     vertical-align: top;
-    display: inline-block;
     text-align: left;
     font-weight: 700;
     height: 17px;
@@ -885,11 +895,15 @@ label, span
   border-color: #d6e9c6;
 }
 
+.error_msg
+{
+    margin-bottom:20px;
+}
+
 .error_msg .alert-success  
 {
     padding:10px 0 10px 60px ;
     color: #468847;
-    margin-bottom:20px;
     width:97%;
     font-size:16px;
     background:#dff0d8 url(../images/tick.png) no-repeat left;
