--- a/Source/NHS.Staffing.DataEntry.Portal/Styles/Site.css
+++ b/Source/NHS.Staffing.DataEntry.Portal/Styles/Site.css
@@ -664,6 +664,32 @@ div.accountInfoCentered
     background: linear-gradient(#4a9bea, #1F7BE5);
 }
 
+.deleteButton
+{    
+    -moz-border-radius: 6px;
+    -webkit-border-radius: 6px;
+    border-radius: 6px;
+    border: 1px solid #CC0000;
+    display: inline-block;
+    color: #fff;
+    font-family: arial;
+    font-size: 11px;
+    font-weight: 700;
+    text-decoration: none;
+    cursor: hand;
+    padding: 3px 8px;
+    -webkit-border-radius: 6px;
+    -moz-border-radius: 6px;
+    border-radius: 6px;
+    background: #CC0000;
+    background: -webkit-gradient(linear, 0 0, 0 bottom, from(#CC0000), to(#FF0000));
+    background: -webkit-linear-gradient(#CC0000, #FF0000);
+    background: -moz-linear-gradient(#CC0000, #FF0000);
+    background: -ms-linear-gradient(#CC0000, #FF0000);
+    background: -o-linear-gradient(#CC0000, #FF0000);
+    background: linear-gradient(#CC0000, #FF0000);
+}
+
 .login_container
 {
     position: absolute;
