Check-in latest code changes

--- a/Source/NHS.Staffing.DataEntry.Portal/Styles/Site.css
+++ b/Source/NHS.Staffing.DataEntry.Portal/Styles/Site.css
@@ -507,6 +507,11 @@ div.accountInfo
     text-align:center;
 }
 
+.shortSpan
+{
+    width:70px !important;    
+}
+
 .formTitleFieldsWithoutFloat
 {
     width:200px;    
