Updated the ward data entry process

--- a/Source/NHS.Staffing.DataEntry.Portal/Styles/Site.css
+++ b/Source/NHS.Staffing.DataEntry.Portal/Styles/Site.css
@@ -867,6 +867,10 @@ label, span
     font-size: 11px;
 }
 
+.grid .altrow {
+    background-color: #eff9fd;
+}
+
 .gridtitle {
     font-weight: bold;
 }
