12. Remove time from date format 13. End date not specified -> leave it blank 8. RN and HCA text boxes needs to be small

--- a/Source/NHS.Staffing.DataEntry.Portal/Styles/ie7.css
+++ b/Source/NHS.Staffing.DataEntry.Portal/Styles/ie7.css
@@ -1,4 +1,15 @@
 ﻿.dashBoard tr th
 {
-    width: 200px !important;
+    /*width: 200px !important;*/
+    
+}
+
+.regularTable tr th, .regularTable tr td
+{
+    width: auto;
+}
+
+.regularTable table
+{
+    table-layout: fixed;
 }
