--- a/Source/NHS.Staffing.DataEntry.Portal/Styles/Site.css
+++ b/Source/NHS.Staffing.DataEntry.Portal/Styles/Site.css
@@ -600,8 +600,15 @@ div.accountInfoCentered
 
 .menu .dynamic
 {
-    border-bottom: 1px solid white;    
+    border-bottom: 1px solid white;
+    cursor: pointer;  
 }
+
+.menu .static
+{
+    cursor: pointer; 
+}
+
 
 .adminNavigation
 {
