17. Dashboard - yes - green background, no - red - pastel colors

--- a/Source/NHS.Staffing.DataEntry.Portal/Styles/Site.css
+++ b/Source/NHS.Staffing.DataEntry.Portal/Styles/Site.css
@@ -182,6 +182,13 @@ ul
     color: #000 !important;   
 }
 
+.greenBackground
+{
+    background-color: Green;
+    font-weight:bold !important;
+    color:White !important;
+}
+
 .boldText th
 {  
     font-weight:bold !important;    
