fix width for pager

--- a/Source/NHS.Staffing.DataEntry.Portal/Styles/Site.css
+++ b/Source/NHS.Staffing.DataEntry.Portal/Styles/Site.css
@@ -1118,4 +1118,14 @@ label, span
 .horizontalWidth
 {
     width: 225px;
+}    
+
+.gridPagerStyle tr td, .gridPagerStyle tr td span
+{
+    width: 50px;
+}
+
+.gridPagerStyle table
+{
+    width: 550px;
 }
