pager column fix width

--- a/Source/NHS.Staffing.DataEntry.Portal/Styles/Site.css
+++ b/Source/NHS.Staffing.DataEntry.Portal/Styles/Site.css
@@ -1120,15 +1120,10 @@ label, span
     width: 225px;
 }    
 
-.gridPagerStyle tr td, .gridPagerStyle tr td span
+.gridPagerStyle tr td
 {
     width: 50px;
     padding-right: 0px;
     overflow: hidden;        
     height: 15px;
-}
-
-.gridPagerStyle table
-{
-    width: 550px;    
 }
