--- a/Source/NHS.Staffing.DataEntry.Portal/Styles/Site.css
+++ b/Source/NHS.Staffing.DataEntry.Portal/Styles/Site.css
@@ -533,6 +533,13 @@ div.accountInfo
     vertical-align: middle;
 }
 
+.wariningIcon
+{
+    background: White url(../Images/WarningIcon1.jpg) no-repeat left;
+    padding-left:100px;
+    height:100px;
+}
+
 .formFieldControl
 {
     width: 200px;
@@ -669,7 +676,7 @@ div.accountInfoCentered
     font-weight: 700;
     text-decoration: none;
     cursor: hand;
-    padding: 3px 8px;
+    padding: 3px 12px;
     -webkit-border-radius: 6px;
     -moz-border-radius: 6px;
     border-radius: 6px;
@@ -1163,6 +1170,19 @@ label, span
     background-color: #ffffff;
     width: 40%;
     z-index: 100; /* makes the div the top layer, so it’ll lay on top of the other content */
+}
+
+.smallOverlay
+{
+    display: none;
+    position: absolute;
+    left: 35%;
+    top: 25%;
+    padding: 26px;
+    border: 2px solid black;
+    background-color: #ffffff;
+    width: 26%;
+    z-index: 100;
 }
 
 .fade
